# feedme

./: .gitignore  README.md  pyproject.toml  test_cli_app.py
src/feedme/: __init__.py  cli.py
