[project]
name = "feedme"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Pascal Jerome", email = "pascal@reflectionanalytics.com" }
]
dependencies = [
    "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/feedme"]
